kubernetes/clusters/dev/config/booter/network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: booter
  namespace: booter
spec:
  description: "booter: proxyDHCP UDP 67, TFTP UDP 69, TFTP proxy UDP 4011, HTTP TCP 50084 from citadel VLAN; egress to DNS and Talos image factory"
  endpointSelector: { }
  ingress:
    - fromCIDR:
        - ${cluster_node_subnet}
      toPorts:
        - ports:
            - port: "67"
              protocol: UDP
            - port: "69"
              protocol: UDP
            - port: "4011"
              protocol: UDP
            - port: "50084"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toFQDNs:
        - matchName: pxe.factory.talos.dev
        - matchName: factory.talos.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
